Chore: update README.mdx (#9)

--- a/README.mdx
+++ b/README.mdx
@@ -4,7 +4,7 @@
 [![Type 2](https://img.shields.io/static/v1?label=|&message=WEBSITE&color=ff&style=for-the-badge&logo=realm&logo-color=white)](http://kurtisrogers.com)
 [![Type 2](https://img.shields.io/static/v1?label=|&message=LINKED-IN&color=cdf998&style=for-the-badge&logo=linkedin&logo-color=white)](https://www.linkedin.com/in/roguetrufflepig/)
 [![Type 2](https://img.shields.io/static/v1?label=|&message=RESUME&color=24555f&style=for-the-badge&logo=solid&logo-color=white)](https://docs.google.com/document/d/1gAEWDdSs0BjWWMU-GtNehQqGVLNzoE5h12ZatL2RLdY/edit?usp=sharing)
-[![Gmail icon](https://img.shields.io/static/v1?label=|&message=GMAIL&color=24555f&style=for-the-badge&logo=gmail&logo-color=white)](mailto:krogers@gmail.com)
+[![Gmail icon](https://img.shields.io/static/v1?label=|&message=GMAIL&color=24555f&style=for-the-badge&logo=gmail&logo-color=white)](mailto:kurtmcmurt@gmail.com)
 [![Linktree icon](https://img.shields.io/static/v1?label=|&message=LINKTREE&color=24555f&style=for-the-badge&logo=linktree&logo-color=white)](https://linktr.ee/kurtisrogers)
   
 # kurtisrogers.com
