Chore: update README.mdx (#10)
- nvm section didn't read so well

--- a/README.mdx
+++ b/README.mdx
@@ -24,7 +24,7 @@ This project is using the ultra naked quickstart version which you can find [her
 
 > [!IMPORTANT]
 > ## Node version
-> This project uses nvm so you if you have that set up, you can simply run `nvm use`.
+> This project contains an `.nvmrc` file so if you have that set up on your machine, you can simply run `nvm use`.
 >
 > **Recommended**
 > ```sh
