Chore: update README.mdx (#16)
- Added an image to the readme

--- a/README.mdx
+++ b/README.mdx
@@ -8,7 +8,7 @@
 [![Linktree icon](https://img.shields.io/static/v1?label=|&message=LINKTREE&color=24555f&style=for-the-badge&logo=linktree&logo-color=white)](https://linktr.ee/kurtisrogers)
   
 # kurtisrogers.com
-Website build
+![A screenshot of the main banner which is in active development](https://github.com/Kurtmcmurt/kurtisrogers.com/blob/develop/public/thumbnail.png)
 
 ![GitHub Actions Workflow Status](https://img.shields.io/github/actions/workflow/status/kurtmcmurt/kurtisrogers.com/node.js.yml)
 
