chore/readme-update (#86)
Co-authored-by: Kurtis Rogers <kurtmcmurt@gmqil.com>

--- a/README.mdx
+++ b/README.mdx
@@ -6,16 +6,12 @@
 [![Type 2](https://img.shields.io/static/v1?label=|&message=RESUME&color=24555f&style=for-the-badge&logo=solid&logo-color=white)](https://docs.google.com/document/d/1gAEWDdSs0BjWWMU-GtNehQqGVLNzoE5h12ZatL2RLdY/edit?usp=sharing)
 [![Gmail icon](https://img.shields.io/static/v1?label=|&message=GMAIL&color=24555f&style=for-the-badge&logo=gmail&logo-color=white)](mailto:kurtmcmurt@gmail.com)
 [![Linktree icon](https://img.shields.io/static/v1?label=|&message=LINKTREE&color=24555f&style=for-the-badge&logo=linktree&logo-color=white)](https://linktr.ee/kurtisrogers)
-  
-# kurtisrogers.com
-![A screenshot of the main banner which is in active development](https://github.com/Kurtmcmurt/kurtisrogers.com/blob/develop/public/thumbnail.png)
-
-![GitHub Actions Workflow Status](https://img.shields.io/github/actions/workflow/status/kurtmcmurt/kurtisrogers.com/node.js.yml)
 
 </div>
 
-Hello and welcome to the repo for my Solid JS website project. I wanted to try out Solid so thought I'd build a new website - *for myself* - using it. REALLY enjoying it so far and highly recommend everyone give it a go!
+Hello and welcome to the repo for my solidjs website project.
 
+![GitHub Actions Workflow Status](https://img.shields.io/github/actions/workflow/status/kurtmcmurt/kurtisrogers.com/node.js.yml)
 
 If you want something a bit more bells and whistles for Solid (like Next or Nuxt), check out [Solid Start](https://docs.solidjs.com/solid-start)!
 
@@ -28,7 +24,7 @@ This project is using the ultra naked quickstart version which you can find [her
 >
 > **Recommended**
 > ```sh
-> v20.18.0`
+> v20.18.0
 > ```
 >
 > ## Scripts
