chore/env-vars-update - Also made a bunch of changes to the form component so it works with the backend changes being implemented

--- a/README.mdx
+++ b/README.mdx
@@ -27,9 +27,7 @@ This project is using the ultra naked quickstart version which you can find [her
 > v20.18.0
 > ```
 >
-> ## Scripts
-> First, install all packages:
-> 
+> ## Installation
 > ```sh
 > yarn install
 > ```
@@ -37,7 +35,8 @@ This project is using the ultra naked quickstart version which you can find [her
 > [!NOTE]
 > ### Production mode (locally)
 > ```sh
->   yarn serve # you'll want to run "yarn build" before this step
+>   yarn build
+>   yarn serve
 > ```
 >
 > ### Development mode (fun times 🎉)
